--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1"
   },
