--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@types/react-image-magnify": "^2.7.4",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.0.3",
