--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-router-dom": "^6.21.3",
         "react-scroll": "^1.9.0",
         "react-slick": "^0.30.1",
+        "react-toastify": "^10.0.4",
         "slick-carousel": "^1.8.1"
     },
     "devDependencies": {
